# SR

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-pipeline.yml
data/banks/: ABC.csv  ACA.csv  BAC.csv  BARC.csv  BBVA.csv  BK.csv  BNP.csv  BOC.csv  BOCOM.csv  BPCE.csv  C.csv  CCB.csv  DBK.csv  GLE.csv  GS.csv  HSBC.csv  ICBC.csv  ING.csv  JPM.csv  MFG.csv  MS.csv  MUFG.csv  SAN.csv  SMFG.csv  STAN.csv  STT.csv  UBS.csv  UCG.csv  WFC.csv
data/history/: 2026-01-14.json  2026-01-15.json  2026-01-16.json  2026-01-19.json  2026-01-20.json  2026-01-21.json  2026-01-22.json  2026-01-23.json  2026-01-26.json  2026-01-27.json  2026-01-28.json  2026-01-29.json  2026-01-30.json  2026-02-02.json  2026-02-03.json  2026-02-04.json  2026-02-05.json  2026-02-06.json  2026-02-09.json  2026-02-10.json  2026-02-11.json  2026-02-12.json  2026-02-13.json  2026-02-16.json  2026-02-17.json  2026-02-18.json  2026-02-19.json  2026-02-20.json  2026-02-23.json  2026-02-24.json  2026-02-25.json  2026-02-26.json  2026-02-27.json  2026-03-02.json  2026-03-03.json  2026-03-04.json  2026-03-05.json  2026-03-06.json  2026-03-09.json  2026-03-10.json  (+24 more)
mcp/: __init__.py  server.py
src/: __init__.py  config.py  fetcher.py  pipeline.py  publish.py  universe.py  utils.py
src/metrics/: covar.py  mes.py  srisk.py
tests/: test_metrics.py  test_security.py
