[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gsib-systemic-risk"
version = "1.0.0"
description = "Daily systemic risk metrics (MES, CoVaR, SRISK) for all 30 G-SIBs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["systemic-risk", "g-sibs", "srisk", "covar", "mes", "mcp", "finance"]
dependencies = [
    "yfinance>=0.2.36",
    "akshare>=1.12.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "statsmodels>=0.14.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "mcp>=1.0.0",
    "python-dateutil>=2.9.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
gsib-pipeline = "src.pipeline:main"
gsib-mcp = "mcp.server:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "mcp*"]
